--- a/src/FlexTemplate/Views/Home/NewBlog.cshtml
+++ b/src/FlexTemplate/Views/Home/NewBlog.cshtml
@@ -2,7 +2,7 @@
 <!-- start Main Wrapper -->
 <div class="main-wrapper scrollspy-container">
     <!-- start hero-header -->
-    <div class="hero hero-breadcrumb" style="background-image:url('../../images/hero-header/03.jpg');">
+    <div class="hero hero-breadcrumb" style="background-image: url('../../resources/pages/newblog.jpg');">
         <div class="container">
             <h1>Додати блог</h1>
             <p>Додати блог</p>
