--- a/src/FlexTemplate/Views/Home/Components/ThisPlacesList/List.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlacesList/List.cshtml
@@ -2,57 +2,62 @@
 @using FlexTemplate.Entities
 @model FlexTemplate.ViewModels.HomeController.ThisPlacesListViewModel
 
-    <div class="restaurant-list-item-wrapper no-last-bb">
-        @foreach (Place place in Model.Places)
-        {
-            <div class="restaurant-list-item clearfix">
+<div class="restaurant-list-item-wrapper no-last-bb">
+    @foreach (Place place in Model.Places)
+    {
+        <div class="restaurant-list-item clearfix">
 
-                <div class="GridLex-grid-noGutter-equalHeight">
+            <div class="GridLex-grid-noGutter-equalHeight">
 
-                    <div class="GridLex-col-3_sm-3_xss-12">
-                        <div class="image">
-                            <img src="../../Resources/Places/@place.Id/head.jpg" alt="Image" onerror="this.onerror = null; this.src = '../../Resources/Defaults/place.jpg';"/>
-                        </div>
+                <div class="GridLex-col-3_sm-3_xss-12">
+                    <div class="image">
+                        <img src="../../Resources/Places/@place.Id/head.jpg" alt="Image" onerror="this.onerror = null; this.src = '../../Resources/Defaults/place.jpg';" />
                     </div>
+                </div>
 
-                    <div class="GridLex-col-9_sm-9_xss-12">
+                <div class="GridLex-col-9_sm-9_xss-12">
 
-                        <div class="GridLex-grid-noGutter-equalHeight">
+                    <div class="GridLex-grid-noGutter-equalHeight">
 
-                            <div class="GridLex-col-9_sm-12 content-wrapper">
+                        <div class="GridLex-col-9_sm-12 content-wrapper">
 
-                                <div class="content">
-                                    <h5><a asp-controller="Home" asp-action="Place" asp-route-id="@place.Id">@place.Name</a></h5>
-                                    <p class="location"><i class="fa fa-map-marker"></i> @place.Address @place.Street?.Name, @place.Street?.City?.Name</p>
-                                    <p class="short-info">@Html.Raw(place.Description?.Replace("<p>", String.Empty).Replace("</p>", String.Empty).Substring(0, place.Description.Length > 87 ? 80 : place.Description.Length) ?? String.Empty)...</p>
-                                    <p class="text-primary offer">-30% від меню «а ля карт»! * </p>
-                                    <p class="cuisine">
-                                        Кухня:
-                                        @foreach (Category category in place.PlaceCategories.Select(pc => pc?.Category))
-                                        {
-                                            <span>@category.Name</span>
-                                        }
-                                    </p>
-                                </div>
-
+                            <div class="content">
+                                <h5><a asp-controller="Home" asp-action="Place" asp-route-id="@place.Id">@place.Name</a></h5>
+                                <p class="location"><i class="fa fa-map-marker"></i> @place.Address @place.Street?.Name, @place.Street?.City?.Name</p>
+                                @{
+                                    var description = FlexTemplate.Services.Extentions.StripHtml(place.Description ?? string.Empty);
+                                    var needDots = description.Length > 80;
+                                    var cutLength = needDots ? 80 : description.Length;
+                                    description = description.Substring(0, cutLength);
+                                    description += needDots ? "..." : string.Empty;
+                                }
+                                <p class="short-info">@description</p>
+                                <p class="text-primary offer">-30% від меню «а ля карт»! * </p>
+                                <p class="cuisine">
+                                    Кухня:
+                                    @foreach (Category category in place.PlaceCategories.Select(pc => pc?.Category))
+                                    {
+                                        <span>@category.Name</span>
+                                    }
+                                </p>
                             </div>
 
-                            <div class="GridLex-col-3_sm-12 meta-wrapper">
+                        </div>
 
-                                <div class="meta">
-                                    <div class="rating-wrapper">
-                                        <div class="rating-item">
-                                            <input type="hidden" class="rating" data-filled="oi oi-star" data-empty="oi oi-star" data-fractions="2" data-readonly value="@(place.Reviews.Any() ? Math.Ceiling(place.Reviews.Average(r => r.Star)) : 0))" />
-                                        </div>
-                                        <span class="texting"> (@place.Reviews.Count відгуків)</span>
+                        <div class="GridLex-col-3_sm-12 meta-wrapper">
+
+                            <div class="meta">
+                                <div class="rating-wrapper">
+                                    <div class="rating-item">
+                                        <input type="hidden" class="rating" data-filled="oi oi-star" data-empty="oi oi-star" data-fractions="2" data-readonly value="@(place.Reviews.Any() ? Math.Ceiling(place.Reviews.Average(r => r.Star)) : 0))" />
                                     </div>
-                                    <div class="right-bottom">
-                                        <div class="price">Середня ціна: <span>@(place.Menus.Any() ? (int)Math.Ceiling(place.Menus.Average(m => m.Products.Any() ? m.Products.Average(product => product.Price) : 0)) : 0) грн</span></div>
-                                        <div class="clear"></div>
-                                        <a asp-controller="Home" asp-action="Place" asp-route-id="@place.Id" class="btn btn-primary btn-sm btn-block">Деталі</a>
-                                    </div>
+                                    <span class="texting"> (@place.Reviews.Count відгуків)</span>
                                 </div>
-
+                                <div class="right-bottom">
+                                    <div class="price">Середня ціна: <span>@(place.Menus.Any() ? (int)Math.Ceiling(place.Menus.Average(m => m.Products.Any() ? m.Products.Average(product => product.Price) : 0)) : 0) грн</span></div>
+                                    <div class="clear"></div>
+                                    <a asp-controller="Home" asp-action="Place" asp-route-id="@place.Id" class="btn btn-primary btn-sm btn-block">Деталі</a>
+                                </div>
                             </div>
 
                         </div>
@@ -62,34 +67,36 @@
                 </div>
 
             </div>
-        }
-    </div>
 
-    <div class="pagination-wrapper">
-        <input id="currentPage" type="hidden" name="currentPage" value="" />
-        <div class="GridLex-grid-middle GridLex-grid-noGutter">
-            <div class="GridLex-col-6_sm-12_xs-12">
-                <div class="text-right text-center-sm mb-10-sm">Показано з 1 по 24 з 253 ресторанів </div>
-            </div>
-            <div class="GridLex-col-6_sm-12_xs-12">
-                <nav>
-                    <ul class="places-pagination pagination pagination-text-center-sm mb-5-xs">
-                        @if (Model.CurrentPage > 1)
-                        {
-                            <li><a data-id="@(Model.CurrentPage - 1)" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
-                        }
-                        @for (var i = 1; i <= Model.Pages; i++)
-                        {
-                            <li class="@(Model.CurrentPage == i ? "active" : string.Empty)"><a data-id="@i">@i</a></li>
-                        }
-                        @if (Model.CurrentPage < Model.Pages)
-                        {
-                            <li><a data-id="@(Model.CurrentPage + 1)" aria-label="Next"><span aria-hidden="true">&raquo;</span></a></li>
-                        }
-                    </ul>
-                </nav>
-
-            </div>
         </div>
+    }
+</div>
 
+<div class="pagination-wrapper">
+    <input id="currentPage" type="hidden" name="currentPage" value="" />
+    <div class="GridLex-grid-middle GridLex-grid-noGutter">
+        <div class="GridLex-col-6_sm-12_xs-12">
+            <div class="text-right text-center-sm mb-10-sm">Показано з 1 по 24 з 253 ресторанів </div>
+        </div>
+        <div class="GridLex-col-6_sm-12_xs-12">
+            <nav>
+                <ul class="places-pagination pagination pagination-text-center-sm mb-5-xs">
+                    @if (Model.CurrentPage > 1)
+                    {
+                        <li><a data-id="@(Model.CurrentPage - 1)" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
+                    }
+                    @for (var i = 1; i <= Model.Pages; i++)
+                    {
+                        <li class="@(Model.CurrentPage == i ? "active" : string.Empty)"><a data-id="@i">@i</a></li>
+                    }
+                    @if (Model.CurrentPage < Model.Pages)
+                    {
+                        <li><a data-id="@(Model.CurrentPage + 1)" aria-label="Next"><span aria-hidden="true">&raquo;</span></a></li>
+                    }
+                </ul>
+            </nav>
+
+        </div>
     </div>
+
+</div>
