--- a/src/FlexTemplate/Views/Home/NewPlace.cshtml
+++ b/src/FlexTemplate/Views/Home/NewPlace.cshtml
@@ -218,7 +218,7 @@
 
                                                     <div class="input-group from mb-15">
                                                         <span class="input-group-addon">from</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="Opening" id="time_open">
+                                                        <input class="oh-timepicker form-control" type="text" name="Opening">
                                                     </div>
 
                                                 </div>
@@ -227,7 +227,7 @@
 
                                                     <div class="input-group to mb-15">
                                                         <span class="input-group-addon">to</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="Closing" id="time_close">
+                                                        <input class="oh-timepicker form-control" type="text" name="Closing">
                                                     </div>
 
                                                 </div>
@@ -246,7 +246,7 @@
 
                                                     <div class="input-group from mb-15">
                                                         <span class="input-group-addon">from</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="WednesdayFrom" id="time_open">
+                                                        <input class="oh-timepicker form-control" type="text" name="WednesdayFrom">
                                                     </div>
 
                                                 </div>
@@ -255,7 +255,7 @@
 
                                                     <div class="input-group to mb-15">
                                                         <span class="input-group-addon">to</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="WednesdayTo" id="time_close">
+                                                        <input class="oh-timepicker form-control" type="text" name="WednesdayTo">
                                                     </div>
 
                                                 </div>
@@ -274,7 +274,7 @@
 
                                                     <div class="input-group from mb-15">
                                                         <span class="input-group-addon">from</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="ThurstdayFrom" id="time_open">
+                                                        <input class="oh-timepicker form-control" type="text" name="ThurstdayFrom">
                                                     </div>
 
                                                 </div>
@@ -283,7 +283,7 @@
 
                                                     <div class="input-group to mb-15">
                                                         <span class="input-group-addon">to</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="ThurstdayTo" id="time_close">
+                                                        <input class="oh-timepicker form-control" type="text" name="ThurstdayTo">
                                                     </div>
 
                                                 </div>
@@ -302,7 +302,7 @@
 
                                                     <div class="input-group from mb-15">
                                                         <span class="input-group-addon">from</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="FridayFrom" id="time_open">
+                                                        <input class="oh-timepicker form-control" type="text" name="FridayFrom">
                                                     </div>
 
                                                 </div>
@@ -311,7 +311,7 @@
 
                                                     <div class="input-group to mb-15">
                                                         <span class="input-group-addon">to</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="FridayTo" id="time_close">
+                                                        <input class="oh-timepicker form-control" type="text" name="FridayTo">
                                                     </div>
 
                                                 </div>
@@ -330,7 +330,7 @@
 
                                                     <div class="input-group from mb-15">
                                                         <span class="input-group-addon">from</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="SaturdayFrom" id="time_open">
+                                                        <input class="oh-timepicker form-control" type="text" name="SaturdayFrom">
                                                     </div>
 
                                                 </div>
@@ -339,7 +339,7 @@
 
                                                     <div class="input-group to mb-15">
                                                         <span class="input-group-addon">to</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="SaturdayTo" id="time_close">
+                                                        <input class="oh-timepicker form-control" type="text" name="SaturdayTo">
                                                     </div>
 
                                                 </div>
@@ -358,7 +358,7 @@
 
                                                     <div class="input-group from mb-15">
                                                         <span class="input-group-addon">from</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="SundayFrom" id="time_open">
+                                                        <input class="oh-timepicker form-control" type="text" name="SundayFrom">
                                                     </div>
 
                                                 </div>
@@ -367,7 +367,7 @@
 
                                                     <div class="input-group to mb-15">
                                                         <span class="input-group-addon">to</span> 
-                                                        <input class="oh-timepicker form-control" type="text" name="SundayTo" id="time_close">
+                                                        <input class="oh-timepicker form-control" type="text" name="SundayTo">
                                                     </div>
 
                                                 </div>
