--- a/src/FlexTemplate/Views/Home/Components/BlogComments/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/BlogComments/Default.cshtml
@@ -1,19 +1,34 @@
-﻿@model FlexTemplate.ViewModels.HomeController.HomeBlogCommentsViewModel
+﻿@using FlexTemplate.Entities
+@using Microsoft.EntityFrameworkCore.Metadata.Internal
+@model FlexTemplate.ViewModels.HomeController.HomeBlogCommentsViewModel
 
 <ul class="comment-item">
-    <li class="clearfix">
-        <div class="comment-avatar">
-            <img src="images/man/03.jpg" alt="author image" />
-        </div>
-        <div class="comment-header">
-            <a href="#" class="comment-reply">відповісти</a>
-            <a href="#" class="font700 text-uppercase">@Model.Comment.Author.Name @Model.Comment.Author.Surname</a>
-            <span class="comment-time">@Model.Comment.CreatedOn</span>
-        </div>
-        <div class="comment-content">
-            <p>@Model.Comment.Text</p>
-        </div>
-    </li>
+    @foreach (BlogComment comment in Model.Comments.OrderByDescending(c => c.CreatedOn))
+    {
+        <li class="clearfix">
+            <div class="comment-avatar">
+                <img src="images/man/03.jpg" alt="author image" />
+            </div>
+            <div class="comment-header">
+                @*<a href="#" class="comment-reply">відповісти</a>*@
+                @{
+                    var userName = "Гість";
 
+                    if (comment.Author != null)
+                    {
+                        userName = comment.Author.Name + " " + comment.Author.Surname;
+                        if (string.IsNullOrEmpty(userName.Trim()))
+                        {
+                            userName = comment.Author.UserName;
+                        }
+                    }
+                }
+                <a href="#" class="font700 text-uppercase">@(userName)</a>
+                <span class="comment-time">@comment.CreatedOn</span>
+            </div>
+            <div class="comment-content">
+                <p>@comment.Text</p>
+            </div>
+        </li>
+                    }
 </ul>
-
