--- a/src/FlexTemplate/Views/Shared/_Layout.cshtml
+++ b/src/FlexTemplate/Views/Shared/_Layout.cshtml
@@ -64,12 +64,200 @@
   </div>
   <!-- end Back To Top -->
 
-  <div id="ajaxLoginModal" class="modal fade login-box-wrapper" data-width="500" data-backdrop="static" data-keyboard="false" tabindex="-1" style="display: none;"></div>
+    <div id="ajaxLoginModal" class="modal fade login-box-wrapper" data-width="500" data-backdrop="static" data-keyboard="false" tabindex="-1" style="display: none;">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h4 class="modal-title text-center">Sign-in into your account</h4>
+        </div>
+
+        <div class="modal-body">
+            <div class="row gap-20">
+
+                <div class="col-xs-12 col-md-12">
+                    <button class="btn btn-facebook btn-block">sign-in with Facebook</button>
+                </div>
+                <div class="col-xs-12 col-md-12 mt-5">
+                    <button class="btn btn-google-plus btn-block">sign-in with Google+</button>
+                </div>
+
+                <div class="col-xs-12 col-md-12">
+                    <div class="login-modal-or">
+                        <div><span>or</span></div>
+                    </div>
+                </div>
+
+                <div class="col-xs-12 col-sm-12 col-md-12">
+
+                    <div class="form-group">
+                        <label>Username</label>
+                        <input class="form-control" placeholder="Min 4 and Max 10 characters" type="text">
+                    </div>
+
+                </div>
+
+                <div class="col-xs-12 col-sm-12 col-md-12">
+
+                    <div class="form-group">
+                        <label>Password</label>
+                        <input class="form-control" placeholder="Min 4 and Max 10 characters" type="text">
+                    </div>
+
+                </div>
+
+                <div class="col-xs-12 col-sm-6 col-md-6">
+                    <div class="checkbox-block">
+                        <input id="remember_me_checkbox" name="remember_me_checkbox" class="checkbox" value="First Choice" type="checkbox">
+                        <label class="" for="remember_me_checkbox">Remember me</label>
+                    </div>
+                </div>
+
+                <div class="col-xs-12 col-sm-6 col-md-6">
+                    <div class="login-box-link-action">
+                        <a data-toggle="modal" href="#forgotPasswordModal">Forgot password?</a>
+                    </div>
+                </div>
+
+                <div class="col-xs-12 col-sm-12 col-md-12">
+                    <div class="register-box-box-action">
+                        No account? <a data-toggle="modal" href="javascript:void(0)" class="registerModal">Register</a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+        <div class="modal-footer text-center">
+            <button type="button" class="btn btn-primary">Log-in</button>
+            <button type="button" data-dismiss="modal" class="btn btn-dark">Close</button>
+        </div>
+    </div>
 
   <div id="ajaxRegisterModal" class="modal fade login-box-wrapper" data-width="500" data-backdrop="static" data-keyboard="false" tabindex="-1" style="display: none;">
+      <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title text-center">Create your account for free</h4>
+      </div>
+
+      <div class="modal-body">
+
+          <div class="row gap-20">
+
+              <div class="col-xs-12 col-md-12">
+                  <button class="btn btn-facebook btn-block">Register with Facebook</button>
+              </div>
+              <div class="col-xs-12 col-md-12 mt-5">
+                  <button class="btn btn-google-plus btn-block">Register with Google+</button>
+              </div>
+
+              <div class="col-xs-12 col-md-12">
+                  <div class="login-modal-or">
+                      <div><span>or</span></div>
+                  </div>
+              </div>
+
+              <div class="col-xs-12 col-sm-12 col-md-12">
+
+                  <div class="form-group">
+                      <label>Username</label>
+                      <input class="form-control" placeholder="Min 4 and Max 10 characters" type="text">
+                  </div>
+
+              </div>
+
+              <div class="col-xs-12 col-sm-12 col-md-12">
+
+                  <div class="form-group">
+                      <label>Email Address</label>
+                      <input class="form-control" placeholder="Enter your email address" type="text">
+                  </div>
+
+              </div>
+
+              <div class="col-xs-12 col-sm-12 col-md-12">
+
+                  <div class="form-group">
+                      <label>Password</label>
+                      <input class="form-control" placeholder="Min 8 and Max 20 characters" type="text">
+                  </div>
+
+              </div>
+
+              <div class="col-xs-12 col-sm-12 col-md-12">
+
+                  <div class="form-group">
+                      <label>Password Confirmation</label>
+                      <input class="form-control" placeholder="Re-type password again" type="text">
+                  </div>
+
+              </div>
+
+              <div class="col-xs-12 col-sm-12 col-md-12">
+                  <div class="checkbox-block">
+                      <input id="register_accept_checkbox" name="register_accept_checkbox" class="checkbox" value="First Choice" type="checkbox">
+                      <label class="" for="register_accept_checkbox">By register, I read &amp; accept <a href="#">the terms</a></label>
+                  </div>
+              </div>
+
+              <div class="col-xs-12 col-sm-12 col-md-12">
+                  <div class="login-box-box-action">
+                      Already have account? <a data-toggle="modal" href="#loginModal">Log-in</a>
+                  </div>
+              </div>
+
+          </div>
+
+      </div>
+
+      <div class="modal-footer text-center">
+          <button type="button" class="btn btn-primary">Log-in</button>
+          <button type="button" data-dismiss="modal" class="btn btn-dark">Close</button>
+      </div>
   </div>
 
-  <div id="ajaxForgotPasswordModal" class="modal fade login-box-wrapper" data-width="500" data-backdrop="static" data-keyboard="false" tabindex="-1" style="display: none;"></div>
+<div id="ajaxForgotPasswordModal" class="modal fade login-box-wrapper" data-width="500" data-backdrop="static" data-keyboard="false" tabindex="-1" style="display: none;">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title text-center">Restore your forgotten password</h4>
+    </div>
+
+    <div class="modal-body">
+        <div class="row gap-20">
+
+            <div class="col-xs-12 col-sm-12 col-md-12">
+                <p class="mb-20">Maids table how learn drift but purse stand yet set. Music me house could among oh as their. Piqued our sister shy nature almost his wicket. Hand dear so we hour to.</p>
+            </div>
+
+            <div class="col-xs-12 col-sm-12 col-md-12">
+
+                <div class="form-group">
+                    <label>Email Address</label>
+                    <input class="form-control" placeholder="Enter your email address" type="text">
+                </div>
+
+            </div>
+
+            <div class="col-xs-12 col-sm-12 col-md-12">
+                <div class="checkbox-block">
+                    <input id="forgot_password_checkbox" name="forgot_password_checkbox" class="checkbox" value="First Choice" type="checkbox">
+                    <label class="" for="forgot_password_checkbox">Generate new password</label>
+                </div>
+            </div>
+
+            <div class="col-xs-12 col-sm-12 col-md-12">
+                <div class="login-box-box-action">
+                    Return to <a data-toggle="modal" href="#loginModal">Log-in</a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="modal-footer text-center">
+        <button type="button" class="btn btn-primary">Restore</button>
+        <button type="button" data-dismiss="modal" class="btn btn-dark">Close</button>
+    </div>
+</div>
     <!-- JS -->
     <script type="text/javascript" src="~/js/jquery-2.2.4.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
