--- a/src/FlexTemplate/Views/Home/Components/ThisPlaceReviews/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlaceReviews/Default.cshtml
@@ -1,4 +1,5 @@
-﻿<div id="detail-content-sticky-nav-02" class="detail-content-section clearfix">
+﻿@using FlexTemplate.Entities
+<div id="detail-content-sticky-nav-02" class="detail-content-section clearfix">
 
     <div class="section-title-02">
         <h3><span>Огляд</span></h3>
@@ -128,36 +129,31 @@
         <div class="review-item-wrapper">
             
             <ul class="review-item-list">
-                @if (Model.Place.Reviews.Count == 0)
+                @foreach (PlaceReview review in Model.Place.Reviews)
                 {
-                    <li class="clearfix">
-
-                        <div class="review-content">
-                            <div class="meta-top">
-                                Станьте першим хто залишить коментар до цього закладу!
-                            </div>
-
-                            <div class="review-entry">
-                            </div>
-                        </div>
-
-                    </li>
-                }
-                @foreach (var review in Model.Place.Reviews)
-                {
-                    @await Component.InvokeAsync("ThisPlaceReview", new { item = review })
+                    @await Component.InvokeAsync("ThisPlaceReview", new { item = review });
                 }
             </ul>
+            <h4>Додати комментар</h4>
 
+            <form method="post" id="contactForm" asp-controller="Home" asp-action="NewPlaceReview" asp-route-placeid="@Model.Place.Id" class="comment-form">
+
+                <div class="clear"></div>
+                <div class="row">
+                    <div class="col-md-12 mb-20">
+                        <div class="form-group">
+                            <label for="comment-message">Комментар</label>
+                            <textarea name="text" id="comment-message" class="form-control" rows="4"></textarea>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <button type="submit" class="btn btn-primary">Відправити</button>
+                    </div>
+                </div>
+            </form>
         </div>
-        <div class="btn-wrappper">
-
-            <a href="restuarant-review.html" class="btn btn-primary">Read more full review</a>
-
-            <a href="restuarant-review.html#review-form" class="btn btn-primary">Write Your Review</a>
-
-        </div>
-
     </div>
 
     <div class="clear mb-15"></div>
