[ADD] отображение пользователя

--- a/src/FlexTemplate/Views/Shared/Components/Header/Solid.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/Header/Solid.cshtml
@@ -1,4 +1,7 @@
-﻿<!-- start Header -->
+﻿@using FlexTemplate.Entities
+@using Microsoft.EntityFrameworkCore.Metadata.Internal
+@model FlexTemplate.ViewModels.HeaderViewModel
+<!-- start Header -->
 <header id="header">
     <!-- start Navbar -->
     <nav class="navbar navbar-default navbar-fixed-top navbar-sticky">
@@ -45,16 +48,33 @@
                             </li>
                             <li class="dropdown bt-dropdown-click">
                                 <a id="language-dropdown" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                    <i class="ion-android-globe"></i> @ViewBag.HeaderViewModel.CurrentLanguage.Name
+                                    <i class="ion-android-globe"></i> @Model.CurrentLanguage.Name
                                     <span class="caret"></span>
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="language-dropdown">
-                                    @foreach (FlexTemplate.Entities.Language lang in ViewBag.HeaderViewModel.Languages)
+                                    @foreach (Language lang in Model.Languages)
                                     {
                                         <li><a href="@Url.Action("ChangeUserLanguage", "Home", new {redirect = Context.Request.Host + Context.Request.Path, languageId = lang.Id})">@lang.Name</a></li>
                                     }
                                 </ul>
                             </li>
+                            @{
+                                var userName = string.Empty;
+                                if (Model.CurrentUser != null)
+                                {
+                                    userName = Model.CurrentUser.Name + " " + Model.CurrentUser.Surname;
+                                    if (string.IsNullOrEmpty(userName.Trim()))
+                                    {
+                                        userName = Model.CurrentUser.UserName;
+                                    }
+                                }
+                            }
+                            @if (!string.IsNullOrEmpty(userName))
+                            {
+                                <li>
+                                    @userName
+                                </li>
+                            }
                             <li class="user-action">
                                 <a href="javascript:void(0)" class="btn btn-primary btn-inverse btn-sm btn-ajax-login" data-toggle="modal">Зареєструватися/Увійти</a>
                             </li>
