--- a/src/FlexTemplate/Views/Home/EditPlace.cshtml
+++ b/src/FlexTemplate/Views/Home/EditPlace.cshtml
@@ -560,7 +560,7 @@
                             </div>
                         </div>
                         <div class="submite-list-box">
-                            <div id="head-update" class="dropzone">
+                            <div id="place-head-update" class="dropzone">
                                 <input type="file">
                                 <input class="file_descriptor" type="hidden" value="@Model.Id" />
                                 <div class="dz-default dz-message"><span>Головна фотографія</span></div>
