--- a/FlexTemplate.PresentationLayer/WebServices/Components/Search/CenterShort.cshtml
+++ b/FlexTemplate.PresentationLayer/WebServices/Components/Search/CenterShort.cshtml
@@ -2,15 +2,15 @@
 @if (Model != null)
 {
 <!-- start hero-header -->
-<div class="hero text-center search-margin-top" style="background-image: url('../../@Model.Images.First()'); margin-top:-25px; z-index:1000;">
+<div class="hero text-center search-margin-top" style="background-image: url('@Model.BackgroundImagePath'); margin-top:-25px; z-index:1000;">
     <div class="container">
 
         <div class="row">
 
             <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
 
-                @Html.Raw(Model.Strings["TitleFirstLabelCaption"])
-                @Html.Raw(Model.Strings["SubtitleLabelCaption"])
+                @Html.Raw(Model.TitleFirstLabelCaption)
+                @Html.Raw(Model.SubtitleLabelCaption)
 
                 <div class="home-search-form home-search-form-center">
 
@@ -25,7 +25,7 @@
                                 <option selected="true" disabled="disabled">Всі кухні</option>
                                 @foreach (var category in Model.Categories)
                                 {
-                                    <option value="@category.Id">@category.Name</option>
+                                    <option value="@category.Key">@category.Value</option>
                                 }
                             </select>
                         </div>
@@ -35,18 +35,18 @@
                                 <option selected="true" disabled="disabled">Всі міста</option>
                                 @foreach (var city in Model.Cities)
                                 {
-                                    <option value="@city.Id">@city.Name</option>
+                                    <option value="@city.Key">@city.Value</option>
                                 }
                             </select>
                         </div>
 
-                        @Html.Raw(Model.Strings["FindButtonCaption"])
+                        @Html.Raw(Model.FindButtonCaption)
 
                     </form>
 
                     <div class="clear"></div>
 
-                    @Html.Raw(Model.Strings["EndLabelCaption"])
+                    @Html.Raw(Model.EndLabelCaption)
 
                 </div>
 
