--- a/FlexTemplate.PresentationLayer/WebServices/Components/Search/CenterShort.cshtml
+++ b/FlexTemplate.PresentationLayer/WebServices/Components/Search/CenterShort.cshtml
@@ -9,8 +9,8 @@
 
             <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
 
-                @Html.Raw(Model.TitleFirstLabelCaption)
-                @Html.Raw(Model.SubtitleLabelCaption)
+                @Model.TitleFirstLabelCaption
+                @Model.SubtitleLabelCaption
 
                 <div class="home-search-form home-search-form-center">
 
@@ -40,13 +40,13 @@
                             </select>
                         </div>
 
-                        @Html.Raw(Model.FindButtonCaption)
+                        @Model.FindButtonCaption
 
                     </form>
 
                     <div class="clear"></div>
 
-                    @Html.Raw(Model.EndLabelCaption)
+                    @Model.EndLabelCaption
 
                 </div>
 
